--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       </div>
     </div>
     
+    <div class="results">
+      <p id="display"></p>
+    </div>
+
     <fieldset>
   <legend>Choose Rock Paper or Scissors</legend>
   <button class="click"><i class="fa-solid fa-hand-back-fist"></i></button>
@@ -29,10 +33,8 @@
 
   <i class="fa-light fa-hand-back-fist"></i>
 </fieldset>
- 
-<div class="results">
-  <p id="display"></p>
-</div>
+
+<p>Created By Eric</p>
   </div>
 
   <script src="main.js">
